--- a/style.css
+++ b/style.css
@@ -122,7 +122,6 @@ breakup h2 {
 rows {
     display: flex;
     flex-direction: column;
-    background-color: ghostwhite;
 }
 
 row {
@@ -242,11 +241,82 @@ continue span { padding:10px; background-color: rgba(19,49,191, 1); color: white
 /* ======================================================================== */
 /* single article */
 /* ======================================================================== */
-.single p {
+body.single {
+    background-color: #eeeeee
+}
+
+.single content {
+    background-color:#fcfcfc;
+}
+.single content p {
     margin-top:1em;
-    line-height: 1.75em;
+    line-height: 1.66em;
+}
+
+.single content {
+    padding-left: 8.58%;
+    width:48.50%;
+    padding-right: 8.58%;
 }
 
 .single article {
-    background-repeat: no-repeat;
+    flex-direction: row;
+}
+
+.single content *:last-child {
+    padding-bottom: 11.17%;
+}
+
+::-moz-selection {
+    background-color: #7FDBFF;
+}
+
+::selection {
+    background-color: #7FDBFF;
+}
+
+.single sidebar {
+    padding-left: 3%;
+    width:31.33%;
+}
+
+.single sidebar-inner {
+    padding-left:1.75;
+    padding-right:1.50%;
+}
+
+.single sidebar h2 {
+    background-color: #1330bf;
+    font-size:0.9em;
+    color: white;
+    padding-top: 1.08%;
+    padding-bottom: 1.08%;
+    padding-left: 1.67%;
+}
+.single sidebar h2 a {
+    color: white !important;
+}
+
+.single div.sidebar-widget {
+    margin-bottom:2em;
+}
+
+.single div.sidebar-widget ul {
+    margin-top:1em;
+}
+
+.single div.sidebar-widget li {
+    list-style: none;
+    margin-bottom:1em;
+    padding-left: 1.67%;
+    font-size:0.9em;
+}
+
+.single div.sidebar-widget a {
+    color: black;
+    text-decoration: none;
+}
+
+.single div.sidebar-widget a:hover {
+    text-decoration: underline;
 }
