--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ footer inner {
 	max-width: 1200px;
 }
 
-footer item a { 
+footer item a {
 	color: #f8f8f8;
 	display: inline-block;
 	font-size: .8em;
@@ -222,6 +222,7 @@ headline {
 	line-height:1.3em;
 }
 
+/* hover cluster */
 row.rows_3 article.hovering headline,
 row.rows_1 article.hovering headline
 {
@@ -233,9 +234,23 @@ row.rows_1 article.hovering headline span
 	background-color: rgba(19,49,191,1);
 }
 
+row.rows_2 article.hovering img {
+	opacity: 0.7;
+}
+
+row.rows_2 article.hovering headline a {
+	color: white !important;
+}
+
+row.rows_2 article.hovering inner {
+	background-color: rgba(0,0,0,0.8);
+	height: 100%;
+	color: white;
+}
+
 row.rows_1 byline, row.rows_3 byline {
 	background: rgba(255, 255, 255, .8);
-	color: #000; 
+	color: #000;
 	margin: .5em auto 1em 0;
 	padding: .25em 10px;
 }
@@ -246,6 +261,7 @@ row.rows_3 excerpt { padding-left: 10px; }
 row.rows_3 article.hovering inner, row.rows_1 article.hovering inner { background-color: black }
 row.rows_3 article.hovering img, row.rows_1 article.hovering img { opacity:0.5 }
 
+/* end hover cluster */
 
 row.rows_3 anchor, row.rows_1 anchor { position: absolute; display: flex; flex-direction: column; z-index: 100; }
 headline a, continue a { text-decoration: none; color: white; }
@@ -271,8 +287,8 @@ continue span { padding:10px; background-color: rgba(19,49,191, 1); color: white
 
 .video-icon {
 	display: block;
-	position: absolute; 
-	top: 0; 
+	position: absolute;
+	top: 0;
 	right: 0;
 	z-index: 1000;
 }
@@ -280,7 +296,7 @@ continue span { padding:10px; background-color: rgba(19,49,191, 1); color: white
 .video-icon-inner {
 	background-color: #1330bf;
 	border-left: 4px solid #fff;
-	border-bottom: 4px solid #fff; 
+	border-bottom: 4px solid #fff;
 	color: #fff;
 	text-align: center;
 }
@@ -307,11 +323,11 @@ continue span { padding:10px; background-color: rgba(19,49,191, 1); color: white
 /* ======================================================================== */
 
 @media all and (max-width:1200px){
-	
+
 	.single article content img,
 	.page article content img,
-	article inner img { 
-		height: auto; 
+	article inner img {
+		height: auto;
 		width: 100%;
 	}
 }
@@ -761,15 +777,15 @@ antirows img { }
 	text-transform: uppercase;
 }
 
-#comment-shortcut > a:hover { 
-	border-color: #d41010; 
-	color: #d41010; 
-	transition: border-color 0.25s, color 0.25s; 
+#comment-shortcut > a:hover {
+	border-color: #d41010;
+	color: #d41010;
+	transition: border-color 0.25s, color 0.25s;
 }
 
-#comment-shortcut > a:hover > span.comment-icon { 
-	background-color: #d41010; 
-	transition: background-color 0.25s; 
+#comment-shortcut > a:hover > span.comment-icon {
+	background-color: #d41010;
+	transition: background-color 0.25s;
 }
 
 
@@ -886,7 +902,7 @@ antirows img { }
 .tags {
 	list-style: none;
 	margin: 0;
-	overflow: hidden; 
+	overflow: hidden;
 	padding: 0;
 }
 
@@ -928,7 +944,7 @@ antirows img { }
 }
 
 .tag:hover::after {
-	border-left-color: #d41010; 
+	border-left-color: #d41010;
 }
 
 .tag-count {
@@ -1010,7 +1026,7 @@ antirows img { }
 
 	row.rows_2 article { width: 100%; padding-right: 0; }
 	row.rows_2 article.column_1 { padding-right: 0; margin-bottom: 1.5em; }
-	
+
 
 	row.rows_2 part { width: 50%; }
 	row.rows_2 part.one { padding-right: 3%; }
@@ -1023,10 +1039,10 @@ antirows img { }
 @media (max-width: 800px) {
 
 	.single article,
-	.page .rows_1 > article { 
+	.page .rows_1 > article {
 		flex-direction: column;
 	}
-	
+
 	.single content,
 	.page .rows_1 > article > content {
 		width: auto;
@@ -1059,7 +1075,7 @@ antirows img { }
 
 
 @media (max-width: 600px) {
-	
+
 	h1 { font-size: 2.5em; }
 
 	.single content .article-author,
@@ -1074,7 +1090,7 @@ antirows img { }
 	.single content .article-categories header, .single content .article-tags header { margin-left: 0; width: 50%; }
 
 	.single content .adjacent-post { align-self: stretch; }
-	
+
 	.single content .previous-post .adjacent-post-inner { flex-direction: column; padding-right: 0; }
 	.single content .next-post .adjacent-post-inner { flex-direction: column-reverse; padding-left: 0; }
 
@@ -1092,18 +1108,18 @@ antirows img { }
 	sidebar-inner { flex-direction: column; padding: 0 1em; }
 
 	sidebar-inner > * { padding: 0; width: 100%; }
-	
+
 	article.archive-teaser {
 		flex-direction: row;
 		padding: 1em;
 		width: 100%;
 	}
-	
+
 	article.archive-teaser .teaser-img-container {
 		margin-right: 1.5%;
 		width: 48.5%;
 	}
-	
+
 	article.archive-teaser h2 {
 		margin-left: 1.5%;
 		width: 48.5%;
@@ -1126,8 +1142,8 @@ antirows img { }
 	body > header menu a { padding: 1.25em .8em; }
 
 	continue { display: none !important; opacity: 0 !important; visibility: hidden !important; }
-	
-	
+
+
 	.article-share-inner header { display: none; }
 	.article-share-inner ul li:first-child { margin-left: 0; }
 
